# pywildfire

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pywildfire/: __init__.py  pyfeats.py  pyprep.py  pywildfire.py
tests/: conftest.py  dummy_data.py  test_pyfeats.py  test_pyprep.py  test_pywildfire.py
